# image_hosting

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-372a2a50c2684058a75d8fa1cc02a57afa7a2c5651cd8e68cc36996e6dd85c5c.json  query-3a9efdf6657c7cc02b665da7ce16d5b17cc5de3a0d31f494b60a96185c9967c5.json  query-5924b0d305c57c27dd29f88c55e05c10f03f69742fbfb9df121a2455440f25cf.json  query-5fd966ccc901dca763e9c06639e895148666e5333037238a55f1df8ad6d2b2b3.json  query-679385eff486af18c0500b129a56de471563703a26e531a7ab1e6a7ea3034bd2.json  query-68341e82c91f957d44b6ccbd716d89342eaf883ec57f382ecde46eb9e24a827c.json  query-743a9bea76e4b354f95f2251e60937fde8611b8e196d1dd98cc8e5cc73022a3a.json  query-9b0c6843e20c597c4a01b63450338207935ab555ed5dbbc841cf8997d4b18278.json  query-d07dfb6b404f245b8bae3e324f69b076e4ce6d42fb157a7e8e1bdefdf9e3f333.json  query-dc75fb4e3f1d2d63cdf8e70eb17afd8b9e29ab34f1c39695cf3fe792255f0900.json  query-ddd61ea575e88d55fea3f78d8ba642e307964c5234ed958f874a74e7385f87df.json  query-e8c626ae2cc3551b1dd633ec36e8258d6beceebcbdbf6bcbbb125d2679e9ee25.json  query-f405e897a23f31baf2e028fb3a5029ef01fb22d3a47b84f20958eefd05d7efae.json
common/: Cargo.toml
common/src/: lib.rs  storage.rs
image-hosting/: Cargo.toml  README.md
image-hosting/locales/: en.json  ru.json
image-hosting/src/: app.rs  error_template.rs  fileserv.rs  image.rs  image_votes.rs  lib.rs  main.rs  storage.rs  user.rs  util.rs
image-hosting/src/components/: image.rs  images.rs  mod.rs  nav_tabs.rs  status_dialog.rs
image-hosting/src/db/: image.rs  image_votes.rs  mod.rs  user.rs
image-hosting/src/pages/: image.rs  index.rs  login.rs  logout.rs  mod.rs  register.rs  search.rs  upload.rs  user.rs
image-hosting/style/: main.css
migrations/: 20240413091820_create-tables.down.sql  20240413091820_create-tables.up.sql
worker/: Cargo.toml
worker/src/: batch_processing.rs  clip_image.rs  clip_text.rs  create_index.rs  main.rs  on_upload.rs  search.rs  util.rs
