[workspace]
members = ["common", "image-hosting", "worker"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
axum = "0.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "signal"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["fs", "limit", "trace"] }
elasticsearch = "8.5.0-alpha.1"
amqprs = { version = "1.6.1", features = ["traces"] }
image = "0.25.1"
anyhow = "1.0.83"
async-trait = "0.1.80"
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-unwrap = "1.0.1"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
