[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
elasticsearch.workspace = true
amqprs.workspace = true
image.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
kamadak-exif = "0.6.1"
ndarray = { version = "0.16.1", features = ["serde", "approx"] }
tokenizers = "0.21.0"
ort = "=2.0.0-rc.9"

[features]
cuda = ["ort/cuda"]
